2001-01-06  Gary Houston  <ghouston@arglist.com>

	* ioext.c (scm_read_string_x_partial): new procedure, implements
	read-string!/partial.
	* ports.c (scm_take_from_input_buffers): new procedure used by
	scm_read_string_x_partial.
	(scm_drain_input): use scm_take_from_input_buffers.

2001-01-06  Marius Vollmer  <mvo@zagadka.ping.de>

	* validate.h (SCM_VALIDATE_NUMBER): New.

2001-01-03  Michael Livshin  <mlivshin@bigfoot.com>

	* guardians.c (F_GREEDY, F_LISTED, F_DESTROYED, GREEDY_P,
 	SET_GREEDY, LISTED_P, SET_LISTED, CLR_LISTED, DESTROYED_P,
 	SET_DESTROYED): new defines/macros.
	(GUARDIAN_LIVE, GUARDIAN_ZOMBIES, GUARDIAN_NEXT): deleted.
	(add_to_live_list): takes a `guardian_t *' now, not SCM.
	(guardian_print): print more info.
	(guardian_apply): check if the guardian is destroyed, and throw an
 	error if so.  take one more optional argument `throw_p'.
	(scm_guard): depending on the value of `throw_p', return a boolean
 	result.
	(scm_get_one_zombie): remove redundant property test.
	(guardian_t): represent the various (currently 3, I hope nothing
 	more gets added) boolean fields as bit flags.
	(scm_guardian_destroyed_p, scm_guardian_greedy_p): new predicates.
	(scm_destroy_guardian_x): new procedure.

	* guardians.h: added prototypes for `scm_guardian_greedy_p' and
	`scm_guardian_destroyed_p'.  changed prototype for `scm_guard'.

2001-01-01  Gary Houston  <ghouston@arglist.com>

	* fports.c (fport_write): bugfix: handle short writes for
	unbuffered ports too.  optimize the buffered case by minimizing
	the number of write/flush calls.
	(write_all): new helper procedure.

2000-12-30  Michael Livshin  <mlivshin@bigfoot.com>

	* guardians.c (guardian_print): for sharing guardians, print that
	they are sharing.
	(scm_guard, scm_get_one_zombie): place the critical section
	barriers more correctly.

	* weaks.c (scm_scan_weak_vectors): move the calculation of the
	`weak_keys' and `weak_values' flags out of the inner loop.
