@@ -1,3 +1,13 @@
+2001-01-08  Gary Houston  <ghouston@arglist.com>
+
+	* validate.h (SCM_VALIDATE_SUBSTRING_SPEC_COPY): new macro.
+	* ioext.c (scm_read_string_x_partial, scm_read_delimited_x),
+	socket.c (scm_recvfrom): use the new macro, plus minor docstring
+	changes.
+	* ioext.c (scm_read_string_x_partial): don't crash if -1 is supplied
+	for fdes.  if current input port is used, check that it's a file
+	port.
+
 2001-01-06  Gary Houston  <ghouston@arglist.com>
 
 	* ioext.c (scm_read_string_x_partial): new procedure, implements
